feat: [US-231] - Cube / Rollup
